Add contact section

--- a/app/00_src/css/04_layout/_section.styl
+++ b/app/00_src/css/04_layout/_section.styl
@@ -75,3 +75,7 @@
     &--philosophy
         .section__icon
             background-image url(/assets/images/icons/icone-philosophie.png)
+
+    &--philosophy
+        .section__icon
+            background-image url(/assets/images/icons/icone-contact.png)
