--- a/app/00_src/templates/T01-homepage.pug
+++ b/app/00_src/templates/T01-homepage.pug
@@ -70,8 +70,7 @@ block content
                 button.btn Découvrir nos membres
     // / philosophy section
 
-
-    // philosophy section
+    // Team section
     section.section.section--team.team.section-open
         div.section__icon
         div.container.section__inner
@@ -171,8 +170,6 @@ block content
                                 div.bar
                                 div.bar
                                 div.bar
-
-
             // / Team right
             // Team left
             div.team__left
@@ -211,4 +208,16 @@ block content
             div.section__footer.choices
                 button.btn Et pour finir...
             // / Team left
-    // / philosophy section
+    // / Team section
+
+    // Contact section
+    section.section.section--contact.section-open
+        div.section__icon
+        div.container.section__inner
+            h2.section__title.heading-2 cela vous intéresse?
+            div.section__content.rte
+                p Si vous voulez poser une question, nous faire part d'un commentaire ou simplement nous suivre:
+            div.section__footer.choices
+                a.btn(href="mailto:laurianne.terrier@yahoo.fr") Envoyez-nous un mail
+                a.btn(href="http://facebook.com") Découvrir nos membres
+    // / Contact section
