--- a/app/00_src/css/00_utilities/_variables.styl
+++ b/app/00_src/css/00_utilities/_variables.styl
@@ -6,12 +6,13 @@ $c-grey         = #d3f7de
 $c-white        = #f1f1f1
 
 $c-purple       = #B6019E
+$c-violet       = #7C4F9F
 $c-blue         = #0e9fa2
 
 // General colors
 
 $c-background   = $c-white
-$c-primary      = $c-purple
+$c-primary      = $c-violet
 $c-secondary    = $c-blue
 $c-font         = $c-black
 $c-link         = $c-primary
