--- a/app/00_src/css/01_base/_typography.styl
+++ b/app/00_src/css/01_base/_typography.styl
@@ -99,7 +99,15 @@
         line-height 1.2
         font-size $size-smaller
 
+.footer__menu
+    font-secondary()
+    upper()
+    light()
+    font-size $size-regular
+    line-height 3
+
 .copyright
     font-primary()
     regular()
     font-size $size-super-tiny
+    color $c-white
