--- a/app/00_src/css/04_layout/_header.styl
+++ b/app/00_src/css/04_layout/_header.styl
@@ -16,6 +16,6 @@
         position absolute
 
     &__right
-        position fixed
+        position absolute
         right $gap
         top 4.2rem
