--- a/app/00_src/css/04_layout/_section.styl
+++ b/app/00_src/css/04_layout/_section.styl
@@ -76,6 +76,9 @@
         .section__icon
             background-image url(/assets/images/icons/icone-philosophie.png)
 
-    &--philosophy
+    &--contact
         .section__icon
             background-image url(/assets/images/icons/icone-contact.png)
+
+
+        
