--- a/app/00_src/templates/components/_footer.pug
+++ b/app/00_src/templates/components/_footer.pug
@@ -1,1 +1,12 @@
-footer.footer
+footer.footer.section.section-open
+    div.section__icon
+    div.container.section__inner
+        nav.footer__menu
+            ul
+                li.menu-item #[a(href="#accueil") Accueil]
+                li.menu-item #[a(href="#projet") Notre projet]
+                li.menu-item #[a(href="#histoire") Notre histoire]
+                li.menu-item #[a(href="#philosophie") Notre philosophie]
+                li.menu-item #[a(href="#equipe") Notre équipe]
+                li.menu-item #[a(href="#contact") Contact]
+        div.copyright © 2016 - LudiTales
