Ad horizontal mobile responsive

--- a/app/00_src/css/03_components/_banner.styl
+++ b/app/00_src/css/03_components/_banner.styl
@@ -7,6 +7,10 @@
     background-size cover
     text-align center
 
+    @media (max-height: 425px)
+        &.section
+            padding-bottom 4rem
+
     &__bg
         position absolute
         top 0
