Add tablet responsive

--- a/app/00_src/css/00_utilities/_variables.styl
+++ b/app/00_src/css/00_utilities/_variables.styl
@@ -8,6 +8,7 @@ $c-white        = #f1f1f1
 $c-purple       = #B6019E
 $c-violet       = #7C4F9F
 $c-blue         = #0e9fa2
+$c-gradient       = linear-gradient(135deg, rgba(182,1,158,1) 0%,rgba(14,159,162,1) 100%)
 
 // General colors
 
@@ -46,7 +47,7 @@ $weight-bold     = 900
 $gap = 3.2rem
 $column-gap = 0.75rem
 // 960, 1152, and 1344 have been chosen because they are divisible by both 12 and 16
-$tablet  = 769px
+$tablet  = 768px
 $desktop = 960px + (2 * $gap)
 $wide    = 1152px + (2 * $gap)
 $fullhd  = 1344px + (2 * $gap)
