--- a/app/00_src/css/04_layout/_section.styl
+++ b/app/00_src/css/04_layout/_section.styl
@@ -36,11 +36,16 @@
         width 15rem
         margin-bottom 2rem
 
+    &__content p
+        max-width 45rem
+        margin auto
+
     &__footer
         margin-top 4rem
 
     &__column
         margin-bottom 3rem
+
 
     &-open
         padding 8rem 0
@@ -79,6 +84,3 @@
     &--contact
         .section__icon
             background-image url(/assets/images/icons/icone-contact.png)
-
-
-        
