--- a/app/00_src/css/02_atoms/_buttons.styl
+++ b/app/00_src/css/02_atoms/_buttons.styl
@@ -1,4 +1,7 @@
 .btn
+    position relative
+
+    z-index 5
     display block
     width 100%
     margin 2rem 0
@@ -7,6 +10,29 @@
     border $c-font solid 2px
     color $c-font
 
+    &:before
+        content ''
+        position absolute
+        z-index -1
+        display block
+        top 0
+        left 0
+        right 0
+        bottom 0
+        background $c-gradient
+        opacity 0
+        transition opacity 500ms ease
+
+    &:hover
+        cursor pointer
+        &:before
+            opacity 1
+            transition opacity 500ms ease
+
     +tablet()
+        width 25rem
         display inline-block
-        padding 1.2rem 4.5rem
+        padding 1.2rem 0
+
+        &:nth-of-type(2)
+            margin-left 1rem
