--- a/app/00_src/css/03_components/_banner.styl
+++ b/app/00_src/css/03_components/_banner.styl
@@ -19,16 +19,7 @@
         height 100%
         background-image url(/assets/images/illus/objet-sur.png), url(/assets/images/illus/objet-sous.png)
         background-repeat no-repeat
-        background-position center center
-
-    &__title
-        font-size 13.5vw
-
-    &__subtitle
-        font-size 7vw
-
-    &__teasing
-        font-size 4.9vw
+        background-position center 40%
 
     &__header
         margin 15rem 0 0
