--- a/app/00_src/templates/T01-homepage.pug
+++ b/app/00_src/templates/T01-homepage.pug
@@ -16,7 +16,7 @@ block content
                 p.banner__title.heading-1 Bienvenue
                 p.banner__subtitle.teasing-1 Explorateur digital,
                 p.banner__teasing.teasing-2 Vous voilà de passage à Luditales.
-            div.banner__footer.choices
+            div.banner__footer.section__choices
                 button.btn Découvrir l'entreprise
                 button.btn Découvrir le projet
     // / banner
@@ -30,7 +30,7 @@ block content
                 img(src="/assets/images/illus/illu800.jpg" alt="Illustration de luditales par laurianne terrier")
                 p A mi-chemin entre les jeux de rôle en ligne et les histoires interactives, LudiTales a pour ambition de vous permettre de vous plonger dans les univers dont vous rêvez, rapidement et simplement. Tous vos choix auront une conséquence sur la suite de votre histoire.
                 p Notre application web vous permettra de créer vous même des histoires passionnantes que vous pourrez partager et jouer seul ou à plusieurs. Venez développer votre créativité et dévoiler vos aventures uniques à vos amis.
-            div.section__footer.choices
+            div.section__footer.section__choices
                 button.btn Découvrir notre histoire
                 button.btn Découvrir nos membres
     // / project section
@@ -42,7 +42,7 @@ block content
             h2.section__title.heading-2 Notre histoire
             div.section__content.rte
                 p Nous sommes une guilde d'étudiants de licence pro MMI. Tous passionnés par le numérique et l’élevage de lamantin rose au Guatelama, nous avons décidé d’étendre notre passion à travers une application dédiée aux histoires interactives. Et ce, aussi pour mettre à l’épreuve nos compétences.
-            div.section__footer.choices
+            div.section__footer.section__choices
                 button.btn Découvrir notre histoire
                 button.btn Découvrir nos membres
     // / story section
@@ -66,7 +66,7 @@ block content
                     img(src="/assets/images/icons/icone-partager.png" alt="partager").section__thumbnail
                     h3.heading-3 Partager
                     p.text Vous souhaitez vivre une aventure incroyable avec vos amis ? Les histoires sont accessibles sur le site et jouables à plusieurs joueurs en même temps si vous le souhaitez ! Programmez des parties pour vous retrouver et rire ensemble.
-            div.section__footer.choices
+            div.section__footer.section__choices
                 button.btn Découvrir nos membres
     // / philosophy section
 
@@ -78,7 +78,7 @@ block content
             div.team__right.team__cardlist.js-cardlist
                 div#laurianne.card.js-card
                     div.container.card__inner
-                        div.row.card__header
+                        div.row.card__header.is-vcentered
                             div.column.card__header__left
                                 p.card__heading Laurianne Terrier
                                 p.card__teasing Développeuse
@@ -89,83 +89,87 @@ block content
                                 p.card__teasing Expérience <br/> professionnelle
                                 div.card__gauge
                                     div.card__gauge__inner(style="width: 40%;")
-                        div.row.card__body.is-multiline.is-mobile
+                        di.card__body
                             p.card__heading-2 Caracteristiques physiques
-                            div.column.is-6
-                                div.row.is-mobile
-                                    div.column.is-three-quarters
-                                        p.card__heading int
-                                        p.card__teasing Intelligence
-                                    div.column
-                                        p.card__heading 3
-                            div.column.is-6
-                                div.row.is-mobile
-                                    div.column.is-three-quarters
-                                        p.card__heading cha
-                                        p.card__teasing charisme
-                                    div.column
-                                        p.card__heading 4
-                            div.column.is-6
-                                div.row.is-mobile
-                                    div.column.is-three-quarters
-                                        p.card__heading sag
-                                        p.card__teasing sagesse
-                                    div.column
-                                        p.card__heading 1
-                            div.column.is-6
-                                div.row.is-mobile
-                                    div.column.is-three-quarters
-                                        p.card__heading end
-                                        p.card__teasing endurance
-                                    div.column
-                                        p.card__heading 2
+                                span.card__heading-2__border
+                            div.card__container.row.is-multiline.is-mobile
+                                div.column.is-6
+                                    div.row.is-mobile
+                                        div.column.is-three-quarters
+                                            p.card__heading int
+                                            p.card__teasing Intelligence
+                                        div.column
+                                            p.card__heading 3
+                                div.column.is-6
+                                    div.row.is-mobile
+                                        div.column.is-three-quarters
+                                            p.card__heading cha
+                                            p.card__teasing charisme
+                                        div.column
+                                            p.card__heading 4
+                                div.column.is-6
+                                    div.row.is-mobile
+                                        div.column.is-three-quarters
+                                            p.card__heading sag
+                                            p.card__teasing sagesse
+                                        div.column
+                                            p.card__heading 1
+                                div.column.is-6
+                                    div.row.is-mobile
+                                        div.column.is-three-quarters
+                                            p.card__heading end
+                                            p.card__teasing endurance
+                                        div.column
+                                            p.card__heading 2
                         div.card__footer
                             p.card__heading-2 Competences
-                            div.row.is-mobile.skill__item
-                                div.column.is-6
-                                    p.card__heading-3 Astuce
-                                div.column.is-6.skill__boxes
-                                    div.skill__box.skill__box--checked
-                                    div.skill__box.skill__box--checked
-                                    div.skill__box
-                                    div.skill__box
-                                    div.skill__box
-                            div.row.is-mobile.skill__item
-                                div.column.is-6
-                                    p.card__heading-3 Erudition
-                                div.column.is-6.skill__boxes
-                                    div.skill__box.skill__box--checked
-                                    div.skill__box.skill__box--checked
-                                    div.skill__box
-                                    div.skill__box
-                                    div.skill__box
-                            div.row.is-mobile.skill__item
-                                div.column.is-6
-                                    p.card__heading-3 Investigation
-                                div.column.is-6.skill__boxes
-                                    div.skill__box.skill__box--checked
-                                    div.skill__box.skill__box--checked
-                                    div.skill__box
-                                    div.skill__box
-                                    div.skill__box
-                            div.row.is-mobile.skill__item
-                                div.column.is-6
-                                    p.card__heading-3 Art
-                                div.column.is-6.skill__boxes
-                                    div.skill__box.skill__box--checked
-                                    div.skill__box.skill__box--checked
-                                    div.skill__box
-                                    div.skill__box
-                                    div.skill__box
-                            div.row.is-mobile.skill__item
-                                div.column.is-6
-                                    p.card__heading-3 Technologie
-                                div.column.is-6.skill__boxes
-                                    div.skill__box.skill__box--checked
-                                    div.skill__box.skill__box--checked
-                                    div.skill__box
-                                    div.skill__box
-                                    div.skill__box
+                                span.card__heading-2__border
+                            div.card__container
+                                div.row.is-mobile.skill__item
+                                    div.column.is-6
+                                        p.card__heading-3 Astuce
+                                    div.column.is-6.skill__boxes
+                                        div.skill__box.skill__box--checked
+                                        div.skill__box.skill__box--checked
+                                        div.skill__box
+                                        div.skill__box
+                                        div.skill__box
+                                div.row.is-mobile.skill__item
+                                    div.column.is-6
+                                        p.card__heading-3 Erudition
+                                    div.column.is-6.skill__boxes
+                                        div.skill__box.skill__box--checked
+                                        div.skill__box.skill__box--checked
+                                        div.skill__box
+                                        div.skill__box
+                                        div.skill__box
+                                div.row.is-mobile.skill__item
+                                    div.column.is-6
+                                        p.card__heading-3 Investigation
+                                    div.column.is-6.skill__boxes
+                                        div.skill__box.skill__box--checked
+                                        div.skill__box.skill__box--checked
+                                        div.skill__box
+                                        div.skill__box
+                                        div.skill__box
+                                div.row.is-mobile.skill__item
+                                    div.column.is-6
+                                        p.card__heading-3 Art
+                                    div.column.is-6.skill__boxes
+                                        div.skill__box.skill__box--checked
+                                        div.skill__box.skill__box--checked
+                                        div.skill__box
+                                        div.skill__box
+                                        div.skill__box
+                                div.row.is-mobile.skill__item
+                                    div.column.is-6
+                                        p.card__heading-3 Technologie
+                                    div.column.is-6.skill__boxes
+                                        div.skill__box.skill__box--checked
+                                        div.skill__box.skill__box--checked
+                                        div.skill__box
+                                        div.skill__box
+                                        div.skill__box
                             button.card__button.js-card-close
                                 div.bar
                                 div.bar
@@ -211,7 +215,7 @@ block content
                         div.team__member__infos
                             p.name laurianne
                             p.surname Terrier
-            div.section__footer.choices
+            div.section__footer.section__choices
                 button.btn Et pour finir...
             // / Team left
     // / Team section
@@ -223,7 +227,7 @@ block content
             h2.section__title.heading-2 cela vous intéresse?
             div.section__content.rte
                 p Si vous voulez poser une question, nous faire part d'un commentaire ou simplement nous suivre:
-            div.section__footer.choices
+            div.section__footer.section__choices
                 a.btn(href="mailto:laurianne.terrier@yahoo.fr") Envoyez-nous un mail
                 a.btn(href="http://facebook.com") Découvrir nos membres
     // / Contact section
