--- a/app/00_src/css/04_layout/_footer.styl
+++ b/app/00_src/css/04_layout/_footer.styl
@@ -25,10 +25,10 @@
                 content ''
                 position absolute
                 display none
-                bottom 4px
-                left 0
-                height 4px
-                width 100%
+                bottom 3px
+                left -1px
+                height 6px
+                width calc(100% + 2px)
                 background #1c1b1e
                 transform-origin left
                 transition transform 200ms ease
