--- a/app/00_src/css/04_layout/_rte.styl
+++ b/app/00_src/css/04_layout/_rte.styl
@@ -5,7 +5,13 @@
     p + p, p + img, img + p
         margin-top 2rem
 
+        +desktop()
+            margin-top 4rem
+
     img
         width 100%
         max-width 100%
         margin 1rem 0
+
+        +desktop()
+            margin 2rem 0
