--- a/app/00_src/css/04_layout/_section.styl
+++ b/app/00_src/css/04_layout/_section.styl
@@ -40,12 +40,14 @@
         max-width 45rem
         margin auto
 
+        +desktop()
+            max-width 55rem
+
     &__footer
         margin-top 4rem
 
     &__column
         margin-bottom 3rem
-
 
     &-open
         padding 8rem 0
